--- a/local/gutter-services-adwick-le-street.html
+++ b/local/gutter-services-adwick-le-street.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Gutter Clearing, Repairs & Replacement in Adwick-le-Street, Doncaster | Home Repairs 4U</title>
+<title>Reliable Gutter Services in Adwick-le-Street, Doncaster | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-adwick-le-street.html">
 
-<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Adwick-le-Street, Doncaster. Protect your home from water damage. Call 07735 873694.">
+<meta name="description" content="Expert gutter clearing, cleaning, repairs, and replacement in Adwick-le-Street, Doncaster. Protect your home with local specialists. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -28,15 +28,11 @@ input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
 .form-row input{width:22px;height:22px;}
 button{cursor:pointer;min-height:48px;}
 button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
-.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;cursor:pointer;}
-.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
-.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
-.lightbox:target{display:flex;}
+.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;}
 footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
 #quoteResult ul{padding-left:22px;}
 .breadcrumbs{font-size:14px;margin-bottom:18px;color:#000;}
 .breadcrumbs span{margin:0 6px;}
-.internal-links a{color:#000;text-decoration:underline;}
 </style>
 
 <!-- Breadcrumb Schema -->
@@ -57,10 +53,13 @@ footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top
 {
 "@context":"https://schema.org",
 "@type":"LocalBusiness",
+"@id":"https://homerepairs4u.com/#localbusiness",
 "name":"Home Repairs 4U",
 "url":"https://homerepairs4u.com/",
 "telephone":"+447735873694",
 "priceRange":"£50–£3000",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"logo":"https://homerepairs4u.com/images/logo.webp",
 "address":{
 "@type":"PostalAddress",
 "addressLocality":"Adwick-le-Street",
@@ -69,7 +68,73 @@ footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top
 "addressCountry":"GB"
 },
 "openingHours":"Mo-Su 07:00-20:00",
-"areaServed":["Adwick-le-Street","Woodlands","Carcroft","Doncaster"]
+"areaServed":["Adwick-le-Street","Carcroft","Skellow","Doncaster"]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{
+"@type":"Question",
+"name":"How often should gutters in Adwick-le-Street be inspected?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"We advise inspecting gutters at least twice annually, especially after autumn and winter. Properties near trees or large gardens may require additional checks."
+}
+},
+{
+"@type":"Question",
+"name":"Can damaged gutters be repaired without replacement?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. Many issues, including small leaks, misaligned sections, or loose fittings, can be repaired without replacing the entire gutter system."
+}
+},
+{
+"@type":"Question",
+"name":"When is full gutter replacement necessary?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Replacement is recommended when gutters are rusted, cracked, or otherwise beyond repair. Our team provides an assessment to determine the best solution for your home."
+}
+},
+{
+"@type":"Question",
+"name":"Do you provide quotes before starting work?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. You can use the quote calculator on this page or contact us to arrange a no-obligation on-site estimate."
+}
+},
+{
+"@type":"Question",
+"name":"Can gutter services be combined with other home maintenance?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Absolutely. Clients often combine gutter services with <a href='/services/pressure-washing.html'>pressure washing</a> or <a href='/services/upvc-restoration.html'>uPVC restoration</a> for comprehensive property maintenance."
+}
+},
+{
+"@type":"Question",
+"name":"Do you offer emergency gutter repairs?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes, we provide urgent services for leaking or blocked gutters that require immediate attention to prevent water damage."
+}
+},
+{
+"@type":"Question",
+"name":"Can blocked gutters cause structural problems?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. Overflowing water can damage walls, foundations, and landscaping if left untreated."
+}
+}
+]
 }
 </script>
 
@@ -77,7 +142,7 @@ footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="lazy">
 <br>
 <a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
 <a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
@@ -89,17 +154,27 @@ footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top
 Home <span>›</span> Guttering Services <span>›</span> <strong>Adwick-le-Street, Doncaster</strong>
 </nav>
 
-<h1>Gutter Services in Adwick-le-Street, Doncaster</h1>
+<h1>Expert Gutter Services in Adwick-le-Street</h1>
 
 <p>
-Home Repairs 4U provides dependable gutter services for homes across Adwick-le-Street. Gutters are an essential part of your property’s drainage system, directing rainwater safely away from rooflines, walls, and foundations. When they are blocked or damaged, even moderate rainfall can lead to unwanted problems.
+Gutters play a critical role in protecting your Adwick-le-Street home from water damage, damp, and structural issues. At Home Repairs 4U, we provide local, professional services including gutter clearing, cleaning, repairs, and replacement, tailored to your property and local environmental conditions.
 </p>
 
 <p>
-Properties in Adwick-le-Street vary in age and design, meaning gutter systems are often under different levels of strain. Regular maintenance helps ensure gutters continue to function as intended and protects the overall condition of your home.
+For all areas we cover across Doncaster and neighbouring communities, please see our <a href="/services/service-areas.html">Service Areas</a> page.
 </p>
 
-<h2>Instant Gutter Quote Calculator</h2>
+<h2>Why Adwick-le-Street Homes Need Specialist Gutter Care</h2>
+
+<p>
+Adwick-le-Street features a range of property styles, from Victorian terraces to modern semi-detached and detached homes. Older properties often have traditional guttering that may require bespoke solutions, while newer builds may suffer from blocked or poorly maintained systems. Seasonal rainfall, wind, and tree debris all contribute to potential gutter issues.
+</p>
+
+<p>
+Our team evaluates each property individually, taking into account roof pitch, gutter type, and local conditions to ensure a solution that protects your home while minimizing unnecessary costs.
+</p>
+
+<h2>Quick and Accurate Quotes</h2>
 
 <form id="quoteForm">
 <label for="metres">Total gutter length (metres)</label>
@@ -148,78 +223,86 @@ items.length
 }
 </script>
 
-<h2>Gutter Maintenance for Adwick-le-Street Properties</h2>
+<h2>Gutter Clearing in Adwick-le-Street</h2>
 
 <p>
-Gutters are exposed to constant weathering throughout the year. In Adwick-le-Street, changing seasons can bring heavy rain, falling leaves, and airborne debris that gradually build up within the gutter system. Without regular attention, this build-up can restrict water flow and place extra strain on joints and brackets.
+Leaves, twigs, and moss can quickly block gutters in Adwick-le-Street, especially during autumn. Our clearing service ensures gutters and downpipes flow freely, preventing overflow, water damage, and staining. Nearby locations we serve include <a href="/local/gutter-services-carcroft.html">Carcroft</a> and <a href="/local/gutter-services-skellow.html">Skellow</a>.
 </p>
+
+<img src="/images/clearing-service.webp" alt="Gutter clearing on an Adwick-le-Street home" class="service-image" loading="lazy">
+
+<h2>Comprehensive Gutter Cleaning</h2>
 
 <p>
-Routine maintenance helps identify minor issues before they develop into more serious problems. Addressing these early reduces the likelihood of internal damp, exterior staining, or damage to roofline components.
+Cleaning gutters removes moss, algae, and grime that can trap moisture and accelerate deterioration. Our team ensures gutters dry efficiently, improving function, longevity, and the overall appearance of your home.
 </p>
 
-<h2>Our Gutter Services</h2>
+<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on an Adwick-le-Street home" class="service-image" loading="lazy">
 
-<h3>Gutter Clearing</h3>
+<h2>Repairs & Replacement Services</h2>
+
 <p>
-Clearing removes internal debris such as leaves and moss, restoring proper water flow and reducing the risk of overflow during rainfall.
+Minor issues such as leaks, loose fittings, or misaligned sections can often be repaired without full replacement. Replacement is recommended when gutters are beyond repair, using durable materials to provide long-lasting protection. Residents across Adwick-le-Street and nearby <a href="/local/gutter-services-doncaster.html">Doncaster</a> rely on us for expert solutions.
 </p>
 
-<a href="#clearing-lightbox">
-<img src="/images/clearing-service.webp" alt="Gutter clearing carried out on a property in Adwick-le-Street" class="service-image">
-</a>
-<div id="clearing-lightbox" class="lightbox">
-<a href="#"><img src="/images/clearing-service.webp" alt=""></a>
-</div>
+<img src="/images/replaced-gutter.webp" alt="New gutter replacement on an Adwick-le-Street home" class="service-image" loading="lazy">
 
-<h3>Gutter Cleaning</h3>
-<p>
-External gutter cleaning improves appearance and helps surfaces dry more efficiently. Clean gutters are less likely to retain moisture that can contribute to wear over time.
-</p>
-
-<a href="#cleaning-lightbox">
-<img src="/images/cleaned-gutters.webp" alt="External gutter cleaning on a home in Adwick-le-Street" class="service-image">
-</a>
-<div id="cleaning-lightbox" class="lightbox">
-<a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a>
-</div>
-
-<h3>Gutter Repairs and Replacement</h3>
-<p>
-Where damage is beyond repair, replacement ensures long-term reliability using modern materials designed to withstand local conditions.
-</p>
-
-<a href="#replacement-lightbox">
-<img src="/images/replaced-gutter.webp" alt="New gutter replacement installed on an Adwick-le-Street property" class="service-image">
-</a>
-<div id="replacement-lightbox" class="lightbox">
-<a href="#"><img src="/images/replaced-gutter.webp" alt=""></a>
-</div>
-
-<h2>Serving Adwick-le-Street and Nearby Areas</h2>
-
-<p class="internal-links">
-Home Repairs 4U also provides gutter services in nearby locations including
-<a href="/local/gutter-services-carcroft.html">Carcroft</a>,
-<a href="/local/gutter-services-darrington.html">Darrington</a>, and
-<a href="/local/gutter-services-campsall.html">Campsall</a>.
-This local coverage allows us to respond efficiently and understand the different property styles across the area.
-</p>
-
-<h2>Why Choose Home Repairs 4U</h2>
+<h2>Seasonal Maintenance Advice</h2>
 
 <ul>
-<li>Experience with local housing types</li>
-<li>Clear communication and honest advice</li>
-<li>Safe access methods</li>
-<li>Transparent pricing</li>
-<li>Reliable local service</li>
+<li>Inspect gutters twice a year and after storms.</li>
+<li>Remove debris, moss, and leaves promptly.</li>
+<li>Check brackets and joints for stability.</li>
+<li>Ensure downpipes are clear of blockages.</li>
+<li>Consider professional assistance for high or hard-to-reach gutters.</li>
 </ul>
 
-<h2>Book Gutter Services in Adwick-le-Street</h2>
+<h2>Nearby Locations We Serve</h2>
 
 <p>
-If your gutters are leaking, blocked, or overdue for attention, Home Repairs 4U is ready to help. Use the calculator above for an instant estimate or contact us to arrange a visit.
+In addition to Adwick-le-Street, we offer services in <a href="/local/gutter-services-carcroft.html">Carcroft</a>, <a href="/local/gutter-services-skellow.html">Skellow</a>, and <a href="/local/gutter-services-doncaster.html">Doncaster</a>. Each property is individually assessed for the most suitable maintenance or repair solutions.
+</p>
+
+<h2>Frequently Asked Questions</h2>
+
+<h3>How often should gutters be maintained?</h3>
+<p>Inspect at least twice yearly, particularly after autumn. Homes near large trees may need additional checks.</p>
+
+<h3>Can minor gutter problems be repaired without replacement?</h3>
+<p>Yes. Leaks, misaligned sections, or loose brackets can usually be fixed without replacing the entire system.</p>
+
+<h3>Do you offer full gutter replacement?</h3>
+<p>Replacement is provided only when necessary, using high-quality materials for durability.</p>
+
+<h3>Can gutter services be combined with other property maintenance?</h3>
+<p>Yes, including <a href="/services/pressure-washing.html">pressure washing</a> and <a href="/services/upvc-restoration.html">uPVC restoration</a> for a complete property refresh.</p>
+
+<h3>Do you offer emergency gutter repairs?</h3>
+<p>Yes. We provide urgent services for leaking or blocked gutters that require immediate attention.</p>
+
+<h3>Can blocked gutters cause structural damage?</h3>
+<p>Yes. Overflowing water can affect walls, foundations, and landscaping if not addressed.</p>
+
+<h2>Other Services for Adwick-le-Street Homes</h2>
+
+<p>
+Consider <a href="/services/pressure-washing.html">pressure washing</a> for patios, driveways, and walls, or <a href="/services/upvc-restoration.html">uPVC restoration</a> for windows and doors. Combining services maintains property value and appearance efficiently.
+</p>
+
+<h2>Why Choose Home Repairs 4U in Adwick-le-Street?</h2>
+
+<ul>
+<li>Expert knowledge of local property types and environmental conditions</li>
+<li>Clear, honest advice for every project</li>
+<li>Safe, professional working practices</li>
+<li>Transparent estimates with no hidden costs</li>
+<li>Reliable and trusted service across Adwick-le-Street and surrounding areas</li>
+</ul>
+
+<h2>Book Your Gutter Service Today</h2>
+
+<p>
+If your gutters are blocked, leaking, or require maintenance, Home Repairs 4U is ready to help. Use the quote calculator above or call to arrange a professional visit.
 </p>
 
 <div style="text-align:center;margin:40px 0;">
@@ -230,7 +313,6 @@ If your gutters are leaking, blocked, or overdue for attention, Home Repairs 4U 
 
 <footer>
 <p>📞 Call 07735 873694</p>
-<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
 <div>
 © Home Repairs 4U | Service Areas, Doncaster
 <br><br>
@@ -245,8 +327,7 @@ If your gutters are leaking, blocked, or overdue for attention, Home Repairs 4U 
 
 <a href="https://www.facebook.com/people/Handyman-services/61584395621256/"
 target="_blank"
-rel="noopener"
-style="color:#fff; text-decoration:underline;">
+rel="noopener" style="color:#fff; text-decoration:underline;">
 Facebook
 </a>
 </div>
