--- a/local/gutter-services-edenthorpe.html
+++ b/local/gutter-services-edenthorpe.html
@@ -1,1 +1,291 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<title>Gutter Clearing, Repairs & Replacement in Edenthorpe, Doncaster | Home Repairs 4U</title>
+
+<link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-edenthorpe.html">
+
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Edenthorpe, Doncaster. Local specialists protecting homes from water damage. Call 07735 873694.">
+
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="preload" as="image" href="/images/logo.webp">
+
+<style>
+html{-webkit-text-size-adjust:100%;}
+body{margin:0;font-family:Arial,sans-serif;background:#f7f7f7;color:#222;line-height:1.9;}
+header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
+.logo{max-height:90px;width:auto;}
+.call-btn{display:inline-block;margin-top:18px;padding:15px 32px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
+.call-btn:hover{background:#333;}
+main{max-width:1000px;margin:0 auto;background:#fff;padding:34px 22px;}
+h1,h2,h3{color:#111;}
+label{font-weight:bold;display:block;margin-bottom:6px;}
+input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
+.form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
+.form-row input{width:22px;height:22px;}
+button{cursor:pointer;min-height:48px;}
+button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
+.service-image{width:100%;max-width:900px;display:block;margin:30px auto;border-radius:6px;}
+footer{background:#000;color:#fff;text-align:center;padding:30px 15px;margin-top:40px;font-size:14px;}
+#quoteResult ul{padding-left:22px;}
+.breadcrumbs{font-size:14px;margin-bottom:18px;color:#000;}
+.breadcrumbs span{margin:0 6px;}
+</style>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[
+{"@type":"ListItem","position":1,"name":"Home","item":"https://homerepairs4u.com/"},
+{"@type":"ListItem","position":2,"name":"Guttering Services","item":"https://homerepairs4u.com/services/guttering.html"},
+{"@type":"ListItem","position":3,"name":"Edenthorpe, Doncaster","item":"https://homerepairs4u.com/local/gutter-services-edenthorpe.html"}
+]
+}
+</script>
+
+<!-- LocalBusiness Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"@id":"https://homerepairs4u.com/#localbusiness",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"telephone":"+447735873694",
+"priceRange":"£50–£3000",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"logo":"https://homerepairs4u.com/images/logo.webp",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Edenthorpe",
+"addressRegion":"South Yorkshire",
+"postalCode":"DN3",
+"addressCountry":"GB"
+},
+"openingHours":"Mo-Su 07:00-20:00",
+"areaServed":["Edenthorpe","Kirk Sandall","Armthorpe","Doncaster"]
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{
+"@type":"Question",
+"name":"How often should gutters be checked in Edenthorpe?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Most properties benefit from gutter inspections twice per year, particularly after autumn leaf fall and winter storms."
+}
+},
+{
+"@type":"Question",
+"name":"Are gutter problems common in newer Edenthorpe homes?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. Newer homes can still experience blocked downpipes, poor water flow, or debris buildup caused by nearby trees and gardens."
+}
+},
+{
+"@type":"Question",
+"name":"Is gutter replacement always necessary when leaks appear?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"No. Many leaks can be repaired. Replacement is recommended only when guttering is severely worn or structurally damaged."
+}
+},
+{
+"@type":"Question",
+"name":"Can gutter work be combined with other exterior services?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. Gutter services are often combined with pressure washing or uPVC restoration for a full exterior refresh."
+}
+},
+{
+"@type":"Question",
+"name":"Do you offer urgent gutter repairs?",
+"acceptedAnswer":{
+"@type":"Answer",
+"text":"Yes. We provide prompt response for urgent gutter issues that risk causing internal or structural damage."
+}
+}
+]
+}
+</script>
+
+</head>
+<body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="lazy">
+<br>
+<a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
+<a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
+</header>
+
+<main>
+
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+Home <span>›</span> Guttering Services <span>›</span> <strong>Edenthorpe, Doncaster</strong>
+</nav>
+
+<h1>Gutter Services in Edenthorpe, Doncaster</h1>
+
+<p>
+In Edenthorpe, guttering plays a vital but often overlooked role in protecting homes from water-related damage. Rainwater must be collected efficiently from the roof and directed safely away from walls, pathways, and foundations. When gutters become blocked, damaged, or poorly aligned, water can quickly find alternative routes—often into places it should never reach.
+</p>
+
+<p>
+Home Repairs 4U provides specialist gutter clearing, cleaning, repair, and replacement services throughout Edenthorpe. Our approach is practical, preventative, and tailored to the individual property rather than offering generic, one-size-fits-all solutions.
+</p>
+
+<p>
+If you are browsing multiple locations, our <a href="/services/service-areas.html">Service Areas</a> page shows the full range of towns and villages we cover across Doncaster.
+</p>
+
+<h2>Understanding Gutter Challenges in Edenthorpe</h2>
+
+<p>
+Edenthorpe is characterised by established residential streets, modern housing developments, and properties surrounded by gardens and greenery. While this creates an attractive living environment, it also increases the likelihood of leaves, seed pods, moss, and airborne debris entering gutter systems throughout the year.
+</p>
+
+<p>
+Heavy rainfall can quickly expose weaknesses in guttering. Even a partially blocked downpipe may cope during light showers but overflow dramatically during prolonged rain. This overflow often goes unnoticed at first, gradually soaking brickwork, staining render, and saturating ground around the property.
+</p>
+
+<p>
+Over time, unmanaged gutter problems can contribute to damp ingress, timber decay, and premature wear of external surfaces. Regular inspection and maintenance reduce these risks and help extend the lifespan of the entire gutter system.
+</p>
+
+<h2>Instant Gutter Quote Calculator</h2>
+
+<form id="quoteForm">
+<label for="metres">Total gutter length (metres)</label>
+<input type="number" id="metres" min="1" step="0.1" required>
+
+<div class="form-row">
+<input type="checkbox" id="clearing">
+<label for="clearing">Gutter clearing</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="cleaning">
+<label for="cleaning">Gutter cleaning</label>
+</div>
+
+<div class="form-row">
+<input type="checkbox" id="replacement">
+<label for="replacement">Gutter replacement</label>
+</div>
+
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
+</form>
+
+<div id="quoteResult" role="alert" aria-live="polite" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+
+<script>
+function calculateQuote(){
+const m = parseFloat(document.getElementById('metres').value);
+if(!m || m <= 0){ alert("Please enter a valid length."); return; }
+
+const clearing = document.getElementById('clearing');
+const cleaning = document.getElementById('cleaning');
+const replacement = document.getElementById('replacement');
+
+let total = 0;
+let items = [];
+
+if(clearing.checked){ let p = m*5; total+=p; items.push(`Gutter clearing: £${p.toFixed(2)}`);}
+if(cleaning.checked){ let p = m*5; total+=p; items.push(`Gutter cleaning: £${p.toFixed(2)}`);}
+if(replacement.checked){ let p = m*21.5; total+=p; items.push(`Gutter replacement: £${p.toFixed(2)}`);}
+
+document.getElementById("quoteResult").innerHTML =
+items.length
+? `<ul>${items.map(i=>`<li>${i}</li>`).join("")}</ul><p><strong>Estimated total: £${total.toFixed(2)}</strong></p>`
+: "<p>Please select at least one service.</p>";
+}
+</script>
+
+<h2>Gutter Clearing Services in Edenthorpe</h2>
+
+<p>
+Gutter clearing is one of the most effective ways to prevent water damage. Leaves, moss, silt, and debris gradually accumulate inside gutters and downpipes, restricting flow and increasing the risk of overflow. Clearing restores full capacity and allows rainwater to drain as intended.
+</p>
+
+<p>
+This service is particularly beneficial after autumn, when falling leaves are most prevalent, and again after winter storms that can dislodge debris from roofs and nearby trees.
+</p>
+
+<img src="/images/clearing-service.webp" alt="Gutter clearing carried out on a property in Edenthorpe" class="service-image" loading="lazy">
+
+<h2>Gutter Cleaning for Longevity and Appearance</h2>
+
+<p>
+While clearing focuses on removing blockages, cleaning addresses surface buildup that can trap moisture. Moss, algae, and grime not only affect appearance but also contribute to corrosion and premature wear.
+</p>
+
+<p>
+Clean gutters dry more effectively, reducing the likelihood of long-term deterioration. This is especially important for homes where guttering is visible from the street and contributes to kerb appeal.
+</p>
+
+<img src="/images/cleaned-gutters.webp" alt="Externally cleaned gutters on an Edenthorpe home" class="service-image" loading="lazy">
+
+<h2>Gutter Repairs and Replacement</h2>
+
+<p>
+Small defects such as leaking joints, loose brackets, or slight misalignment can often be repaired efficiently. Addressing these early prevents more extensive damage and avoids unnecessary replacement costs.
+</p>
+
+<p>
+When guttering has reached the end of its usable life, replacement provides a durable, long-term solution. Modern systems are designed to cope with UK weather conditions and improve overall water management.
+</p>
+
+<img src="/images/replaced-gutter.webp" alt="Replacement gutter installation in Edenthorpe" class="service-image" loading="lazy">
+
+<h2>Frequently Asked Questions</h2>
+
+<h3>What are the signs of blocked gutters?</h3>
+<p>Overflowing water, visible plant growth, damp patches, or pooling near foundations are common indicators.</p>
+
+<h3>Is gutter maintenance really necessary?</h3>
+<p>Yes. Preventative maintenance is far more cost-effective than repairing water damage caused by neglected gutters.</p>
+
+<h3>Can gutter services be combined with other work?</h3>
+<p>Yes. Many customers also arrange <a href="/services/pressure-washing.html">pressure washing</a> or <a href="/services/upvc-restoration.html">uPVC restoration</a>.</p>
+
+<h2>Additional Exterior Services in Edenthorpe</h2>
+
+<p>
+Alongside guttering, we provide exterior maintenance services including <a href="/services/pressure-washing.html">pressure washing</a>, <a href="/services/upvc-restoration.html">uPVC restoration</a>, fencing, and general property repairs. Nearby areas we serve include <a href="/local/gutter-services-kirk-sandall.html">Kirk Sandall</a> and <a href="/local/gutter-services-armthorpe.html">Armthorpe</a>.
+</p>
+
+<h2>Arrange Gutter Services in Edenthorpe</h2>
+
+<p>
+If your gutters are blocked, leaking, or overdue for maintenance, Home Repairs 4U is ready to help. Use the quote calculator above or get in touch to arrange a visit at a time that suits you.
+</p>
+
+<div style="text-align:center;margin:40px 0;">
+<a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
+</div>
+
+</main>
+
+<footer>
+<p>📞 Call 07735 873694</p>
+<div>
+© Home Repairs 4U | Doncaster
+</div>
+</footer>
+
+</body>
+</html>
